// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withTwrn should not render media queries on SSR 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View />
</View>
`;

exports[`withTwrn should not render media queries on android 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={Object {}}
  />
</View>
`;

exports[`withTwrn should not render media queries on ios 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={Object {}}
  />
</View>
`;

exports[`withTwrn should render correctly with no styles 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={Object {}}
  />
</View>
`;

exports[`withTwrn should render media queries on web 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View />
</View>
`;

exports[`withTwrn should render regular react-native styles 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ff0000",
      }
    }
  />
</View>
`;

exports[`withTwrn should render regular react-native styles 2`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ff0000",
        "padding": 10,
      }
    }
  />
</View>
`;

exports[`withTwrn should render tw-rn base and regular react-native styles correctly 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "padding": 10,
      }
    }
  />
</View>
`;

exports[`withTwrn should render tw-rn base styles correctly in ios 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  />
</View>
`;
